# AstDyn

./: .clang-tidy  .gitignore  .gitmodules  17030_astdys.rwo  CLAUDE 2.md  CMakeLists.txt  FRAME_CONVERSION_MODULE.md  JPL_VALIDATION_REPORT.md  ORBFIT_CPP_CONVERSION_PLAN.md  ORBIT_DETERMINATION_PLAN.md  POMPEJA_COMPARISON_REPORT.html  POMPEJA_COMPARISON_REPORT.md  POMPEJA_COMPARISON_REPORT_CORRECTED.html  POMPEJA_REPORT_README.md  PROJECT_SUMMARY.md  RADAU15_STATUS.md  README.md  SESSION_SUMMARY_2025-12-09.md  SETUP_DE441.md  SUCCESS_SUMMARY.md  SUNTO_FINALE_VALIDAZIONE_ASTDYN.md  VALIDAZIONE_ASTDYN_FRAME_CORRECTED.md  barbara_aas.yaml  barbara_rkf78.yaml  barbara_saba4.yaml  barbara_search.json  calc_barbara_highprec.cpp  calc_barbara_xml.cpp  check_barbara_path  check_barbara_path.cpp  check_horizons_raw  check_horizons_raw.cpp  check_star_details  check_star_details.cpp  config.json  debug_aberration.cpp  debug_barbara_search.cpp  debug_cartesian  debug_cartesian.cpp  debug_occ_logic.cpp  (+56 more)
astdyn/: .gitignore  BENCHMARK_INSTRUCTIONS.md  CMakeLists.txt  EXAMPLES 2.md  EXAMPLES.md  Makefile  PHASE1_COMPLETE.md  README.md  VALIDATION_REPORT.md  build.sh  haumea_conf.json  nireus_emulated_italy.kml  nireus_italy_track.kml  nireus_nominal_africa.kml  nireus_official_occult4.kml  od_benchmark_results.csv  test_astdyn_30_types.cpp  test_batch_2.csv  test_batch_4.csv  test_batchv2_1.csv  vesta_astdyn.kml  vesta_official.kml
astdyn/benchmarks/: CMakeLists.txt  convergence_test.csv  energy_conservation.csv  make_plot.py  stm_validation.csv  work_precision.csv
astdyn/cmake/: Config.hpp.in  Version.hpp.in
astdyn/data/: 11234.eq1  11234.rwo  apophis_iod_3obs.txt  apophis_mpc_full.txt  phaethon_iod_3obs.txt  phaethon_mpc_full.txt  vesta_iod_3obs.txt  vesta_mpc_full.txt
astdyn/docs/: API_REFERENCE.md  ASTDYN_EXPORT_GUIDE.md  ASTDYS_FORMAT.md  CONFIGURABLE_PARSERS.md  DESIGN_STM_nuova.md  Doxyfile  EPHEMERIS_SUPPORT.md  IMPLEMENTATION_PLAN 2.md  IMPLEMENTATION_PLAN.md  OOP_CONFIG_SHORT.md  PARSERS_QUICKSTART.md  RKF78_INTEGRATOR.md  TODO_fase5_e_oltre.md  VALIDATION_REPORT.md  config_manual.md  haumea_final_validation_report.md  ioccultcalc_guide.md  roadmap_orchestrator.md  validation_barbara_it 3.md
astdyn/docs/manual/: MANUAL_STATUS.md  README.md  ScientificReferenceManual.tex  compile_test.sh
astdyn/docs/scientific_paper/: paper.tex  (+1 more)
astdyn/examples/: CMakeLists.txt  Makefile  aas_propagation_demo 2.cpp  advanced_ephemeris_example.cpp  basic_usage.cpp  benchmark_config.json  benchmark_integrators.cpp  benchmark_long_term.cpp  benchmark_long_term_v2.cpp  benchmark_short_term.cpp  check_de441_positions.cpp  coordinates_example.cpp  critical_validation.cpp  debug_engine 2.cpp  debug_hzn.cpp  ephemeris_example.cpp  example_astdys_fitter.cpp  example_configurable_parsers.cpp  example_coordinates  example_ephemeris  fitorb_api_demo.cpp  fitting_comparison_34713.cpp  full_od_workflow.cpp  gaia_occultation_test.cpp  horizons_query.cpp  propagate_79148.cpp  propagation_benchmark  propagation_benchmark.cpp  propagation_diagnostic  propagation_example.cpp  scientific_validation 2.cpp  scientific_validation.cpp  simple_pompeja_fit.cpp  test_79518.cpp  test_batch_vs_single.cpp  test_closest_approach 2.cpp  test_covariance 2.cpp  test_fit_bk290.cpp  test_kahan_energy 2.cpp  test_reversibility_saba4.cpp  (+1 more)
astdyn/src/: AstDynEngine.cpp  CMakeLists.txt  Makefile  astdyn  astdyn_convert  astdyn_convert.cpp  astdyn_main.cpp
astdyn/tests/: CMakeLists.txt  Makefile  astdyn_astdys_fitter  astdyn_astdys_fitter[1]_include.cmake  astdyn_astdys_fitter[1]_tests.cmake  astdyn_close_approach_tests  astdyn_close_approach_tests[1]_include.cmake  astdyn_close_approach_tests[1]_tests.cmake  astdyn_config_tests  astdyn_config_tests[1]_include.cmake  astdyn_config_tests[1]_tests.cmake  astdyn_coordinates_tests  astdyn_coordinates_tests[1]_include.cmake  astdyn_coordinates_tests[1]_tests.cmake  astdyn_engine_tests  astdyn_engine_tests[1]_include.cmake  astdyn_engine_tests[1]_tests.cmake  astdyn_ephemeris_tests  astdyn_ephemeris_tests[1]_include.cmake  astdyn_ephemeris_tests[1]_tests.cmake  astdyn_jacobian_tests  astdyn_jacobian_tests[1]_include.cmake  astdyn_jacobian_tests[1]_tests.cmake  astdyn_math_tests  astdyn_math_tests[1]_include.cmake  astdyn_math_tests[1]_tests.cmake  astdyn_mean_osculating_tests  astdyn_mean_osculating_tests[1]_include.cmake  astdyn_mean_osculating_tests[1]_tests.cmake  astdyn_orbit_determination_tests  astdyn_orbit_determination_tests[1]_include.cmake  astdyn_orbit_determination_tests[1]_tests.cmake  astdyn_pompeja_diffcorr  astdyn_pompeja_diffcorr[1]_include.cmake  astdyn_pompeja_diffcorr[1]_tests.cmake  astdyn_pompeja_fit[1]_include.cmake  astdyn_pompeja_full_dynamics  astdyn_pompeja_full_dynamics[1]_include.cmake  astdyn_pompeja_full_dynamics[1]_tests.cmake  astdyn_pompeja_gauss_iod  (+78 more)
astdyn/tools/: 203.oel  203.oop  203.txt  203.yaml  203_astdys.oel  203_astdys.rwo  203_astdys_recent100.rwo  203_recent.txt  203_recent100.rwo  203_subset.rwo  CMakeLists.txt  astdyn_chebyshev_demo.cpp  astdyn_multi_chebyshev_demo.cpp  astdyn_oc_fitter.cpp  astdyn_propagator.cpp  astdyn_trajectory_export.cpp  benchmark_aas.cpp  benchmark_extended.cpp  bsp_info 2.cpp  check_earth.py  check_residual_fortran_style.py  check_shadows.cpp  code_fits_head_checker.py  critical_validation.py  debug_coordinates.py  download_benchmark_data.py  fetch_haumea_system.py  fetch_horizons_vectors.cpp  generate_pompeja_comparison.py  generate_pompeja_data.cpp  generate_pompeja_real_comparison.py  haumea_baseline.cpp  haumea_mapper 2.cpp  haumea_mapper.cpp  haumea_occult_finder.cpp  haumea_prediction_test 3.cpp  haumea_star_search.cpp  haumea_system_final.cpp  haumea_system_integrator 2.cpp  ioccultcalc.cpp  (+22 more)
examples/: CMakeLists.txt  chebyshev_rkf78_example.cpp  propagation_demo.cpp  test_astdyn_integration_standalone.cpp  test_astdyn_simple.cpp
italoccultlibrary/tests/: CMakeLists.txt  test_34713_precision.cpp  test_allnum_cat_simulation.cpp  test_astdyn_wrapper.cpp  test_asteroid_249_precision.cpp  test_chebyshev.cpp
(+740 files in other folders)
